.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:00:00 **** Incremental Build of configuration Debug for project 8I2C_LCD_UART ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:144:50: error: 'rx_buf' undeclared (first use in this function)
  144 |          if (HAL_UART_Receive(&huart2, (uint8_t*)rx_buf, sizeof(rx_buf) - 1, 100) == HAL_OK)
      |                                                  ^~~~~~
../Core/Src/main.c:144:50: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:155:14: error: implicit declaration of function 'strncmp' [-Wimplicit-function-declaration]
  155 |          if (strncmp(rx_buf, "L1", 2) == 0)
      |              ^~~~~~~
../Core/Src/main.c:39:1: note: include '<string.h>' or provide a declaration of 'strncmp'
   38 | #include "lcd.h"
  +++ |+#include <string.h>
   39 | 
../Core/Src/main.c:155:36: warning: 'strncmp' argument 3 type is 'int' where 'unsigned int' is expected in a call to built-in function declared without prototype [-Wbuiltin-declaration-mismatch]
  155 |          if (strncmp(rx_buf, "L1", 2) == 0)
      |                                    ^
<built-in>: note: built-in 'strncmp' declared here
../Core/Src/main.c:181:17: error: implicit declaration of function 'memset' [-Wimplicit-function-declaration]
  181 |                 memset(rx_buf, 0, sizeof(rx_buf));
      |                 ^~~~~~
../Core/Src/main.c:181:17: note: include '<string.h>' or provide a declaration of 'memset'
../Core/Src/main.c:181:17: warning: incompatible implicit declaration of built-in function 'memset' [-Wbuiltin-declaration-mismatch]
../Core/Src/main.c:181:17: note: include '<string.h>' or provide a declaration of 'memset'
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
